Fix modals on small screens

--- a/client/main.styl
+++ b/client/main.styl
@@ -316,6 +316,7 @@ body.nopage
     visibility: visible
   cursor: help
   color: black
+  overflow: auto
 .modal.error
   background: pink
 .modal.info
